--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Into Darkness</title>
   </head>
   <body>
-    
-    <script type="module" src="/entry.js"></script>
+    <script src='/scripts/ammo.js'></script>
+    <script type="module" src="/entry.mjs"></script>
   </body>
 </html>
