Couldn't get Ammo.js to function correctly

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <script type="text/javascript" src="scripts/ammo.js"></script>
-    <script type="module" src="/entry.mjs"></script>
+    <script type="module" src="/entry.mjs" defer></script> <!-- defer so ammo will be forced to load before entry -->
   </body>
 </html>
